chore: update user registration process
